# cgpt-cmd

./: .gitignore  Cargo.toml  LICENSE
src/: api.rs  chat.rs  config.rs  main.rs
