[package]
name = "cgpt-cmd"
version = "0.0.1"
description = "ChatGPT command line utility"
license-file = "LICENSE"
edition = "2021"

[dependencies]
inquire = "0.6.0"
ureq = { version = "2.6.2", features = ["json"] }
dirs = "4.0.0"
termcolor = "1.1"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.2"
